--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
+    "mongoose": "^6.7.2",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
